--- a/Css/Trab.css
+++ b/Css/Trab.css
@@ -50,7 +50,7 @@
     list-style: none;
     display: block;
     position: absolute;      
-    top: 47%;
+    top: 46%;
     left: 49%;  
     
 }
@@ -240,18 +240,81 @@
     list-style: none;/*PRA SUMIR COM OS MARCADORES DAS LISTAS*/
     display:ruby;
     position: absolute;        
-    top: 56%;
-    height: 290px;/*ALTURA*/
+    top: 65%;
+    height: 230px;/*ALTURA*/
     width:  600px; /*LARGURA*/
     border: solid 1px;
     border-color:blue;    
-    margin: 2%;
-    padding: 2%;
+    margin: 0%;
+    padding: 0%;
     margin-left: 40%;
-    background-color:white;
+   /* background-color:white;*/
 }
 
+/*---------------------------------------------------------------------------------------------------------------*/
+/*--------------------------------- CONFIGURANDO O TITULO E A MATERIA DO SLIDE ----------------------------------*/
+#tituloF{
+    color:red;
+    margin-top: -8%;
+    margin-left:-70%;
+    width:  600px; /*LARGURA*/
+    position: absolute;
+}
 
+#paragrafoF{
+    color:black;
+    margin-top: 0%;
+    margin-left:-35%;
+    width:  600px; /*LARGURA*/
+    position: absolute;
+    font-size: 10x;
+    text-shadow: 1px 1px 1px orange, -1px 1px 1px orange,1px -1px 1px orange,1px 1px 1px orange,
+    -1px -1px 1px orange;/*EFEITO COM SOMBRAS PARA DA O CONTORNO DO NOME DO TIME*/ 
+}
+
+#tituloMessi{
+    color:blue;
+    margin-top: -8%;
+    margin-left:-70%;
+    width:  600px; /*LARGURA*/
+    position: absolute;
+    text-shadow: 1px 1px 1px orange, -1px 1px 1px orange,1px -1px 1px orange,1px 1px 1px orange,
+    -1px -1px 1px orange;/*EFEITO COM SOMBRAS PARA DA O CONTORNO DO NOME DO TIME*/ 
+
+}
+#paragrafoMessi{
+    color:black;
+    margin-top: 0%;
+    margin-left:-20%;
+    width:  600px; /*LARGURA*/
+    position: absolute;
+    font-size: 10x;
+    text-shadow: 1px 1px 1px orange, -1px 1px 1px orange,1px -1px 1px orange,1px 1px 1px orange,
+    -1px -1px 1px orange;/*EFEITO COM SOMBRAS PARA DA O CONTORNO DO NOME DO TIME*/ 
+}
+/*------------------------------------------------------------------------------------------------------------*/
+#tituloBrasi{
+    color: white;
+    margin-top: -8%;
+    margin-left:-70%;
+    width:  600px; /*LARGURA*/
+    position: absolute;
+    text-shadow: 1px 1px 1px black, -1px 1px 1px black,1px -1px 1px black,1px 1px 1px black,
+    -1px -1px 1px black;/*EFEITO COM SOMBRAS PARA DA O CONTORNO DO NOME DO TIME*/ 
+
+}
+#paragrafoBrasil{
+    color:white;
+    margin-top: 0%;
+    margin-left:-20%;
+    width:  600px; /*LARGURA*/
+    position: absolute;
+    font-size: 8x;
+    text-shadow: 1px 1px 1px black, -1px 1px 1px black,1px -1px 1px black,1px 1px 1px black,
+    -1px -1px 1px black;/*EFEITO COM SOMBRAS PARA DA O CONTORNO DO NOME DO TIME*/ 
+ 
+
+}
 #ItemNoticia{
     
 
